# kv-secrets

./: .gitignore  BUILD.md  LICENSE  README.md  REVIEW.md  SECURITY.md  pyproject.toml
.github/workflows/: semgrep.yml  test.yml
docs/: attack-findings.md  guide.md  security-analysis.md
kv/: DESIGN.md  README.md  __init__.py  __main__.py  agent.py  auth.py  cli.py  cli_remote.py  config.py  crypto.py  env.py  hook.py  providers.py  remote.py  store.py  sync.py
kv_mcp/: __init__.py  __main__.py  protocol.py  server.py  tools.py
tests/: test_crypto.py  test_e2e.py  test_mcp.py  test_providers.py  test_stress.py  test_vault_security.py
